--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@netlify/plugin-nextjs": "^4.29.2",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-animated-number": "^0.4.4",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
