--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@netlify/plugin-nextjs": "^4.29.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "8.22.0",
