--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -49,6 +49,35 @@ collections:
         - { label: "content", name: "content", widget: "markdown" }
         - { label: "image_source", name: "image_source", widget: "image" , media_folder: /posts/eventos/images}
         - { label: "image_event", name: "image_event", widget: "image" , media_folder: /posts/eventos/images/images_event}
+  - name: "ejs"
+    label: "EJs que fazem parte do NEJPOA"      
+    folder: "public/posts/ejs"
+    identifier_field: "ejs"
+    slug: "{{slug}}"
+    extension: "json"     
+    create: true
+    editor:
+      preview: false
+    fields:
+        - { label: "nome", name: "nome", widget: "string" }
+        - { label: "url", name: "url", widget: "image", media_folder: "/posts/ejs/images" }
+        - { label: "tag", name: "tag", widget: "strign" }
+        - { label: "websiteLink", name: "websiteLink", widget: "string" }
+  - name: "parceiros"
+    label: "Parceiros do NEJPOA"      
+    folder: "public/posts/parceiros"
+    identifier_field: "parceiros"
+    slug: "{{slug}}"
+    extension: "json"     
+    create: true
+    editor:
+      preview: false
+    fields:
+        - { label: "image_source", name: "image_source", widget: "image", media_folder: "/posts/parceiros/images" }
+        - { label: "link", name: "link", widget: "string" }
+        
+        
+
 
         
         
