--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -46,6 +46,7 @@ collections:
       preview: false
     fields:
         - { label: "title", name: "title", widget: "string" }
+        - { label: "alt", name: "alt", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
         - { label: "image_source", name: "image_source", widget: "image" , media_folder: posts/eventos/images}
         - { label: "image_event", name: "image_event", widget: "image" , media_folder: posts/eventos/images/images_event}
