--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,8 +3,7 @@ backend:
   branch: main # Branch to update (optional; defaults to master) 
 publish_mode: editorial_workflow
 locale: "pt"
-media_folder: posts
-public_folder: posts
+public_folder: public/posts
 collections:
   - name: "exemplo"
     label: "Exemplo"      
@@ -33,8 +32,8 @@ collections:
         - { label: "subtitle", name: "subtitle", widget: "string" }
         - { label: "date", name: "date", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
-        - { label: "image_source", name: "image_source", widget: "image" , media_folder: posts/blogs/images}
-        - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder: posts/blogs/images/images_alt}
+        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "images/{{slug}}"}
+        - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder:  "images/images_alt/{{slug}}"}
   - name: "evento"
     label: "Eventos"      
     folder: "public/posts/eventos"
@@ -48,8 +47,8 @@ collections:
         - { label: "title", name: "title", widget: "string" }
         - { label: "alt", name: "alt", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
-        - { label: "image_source", name: "image_source", widget: "image" , media_folder: posts/eventos/images}
-        - { label: "image_event", name: "image_event", widget: "image" , media_folder: posts/eventos/images/images_event}
+        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "images/{{slug}}"}
+        - { label: "image_event", name: "image_event", widget: "image" , media_folder: "images/images_event/{{slug}}"}
   - name: "ejs"
     label: "EJs que fazem parte do NEJPOA"      
     folder: "public/posts/ejs"
@@ -61,7 +60,7 @@ collections:
       preview: false
     fields:
         - { label: "title", name: "title", widget: "string" }
-        - { label: "url", name: "url", widget: "image", media_folder: posts/ejs/images" }
+        - { label: "url", name: "url", widget: "image", media_folder: "images/{{slug}}" }
         - { label: "tag", name: "tag", widget: "string" }
         - { label: "websiteLink", name: "websiteLink", widget: "string" }
   - name: "parceiros"
@@ -74,7 +73,7 @@ collections:
     editor:
       preview: false
     fields:
-        - { label: "image_source", name: "image_source", widget: "image", media_folder: "posts/parceiros/images" }
+        - { label: "image_source", name: "image_source", widget: "image", media_folder: "images/{{slug}}" }
         - { label: "link", name: "link", widget: "string" }
         
         
