--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,7 +20,7 @@ collections:
       
   - name: "blog"
     label: "Conteúdo do Blog"      
-    folder: "public/posts/blogs"
+    folder: "blogs"
     identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
@@ -36,7 +36,7 @@ collections:
         - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder:  "images/images_alt/{{slug}}"}
   - name: "evento"
     label: "Eventos"      
-    folder: "public/posts/eventos"
+    folder: "eventos"
     identifier_field: "evento"
     slug: "{{slug}}"
     extension: "json"     
@@ -51,7 +51,7 @@ collections:
         - { label: "image_event", name: "image_event", widget: "image" , media_folder: "images/images_event/{{slug}}"}
   - name: "ejs"
     label: "EJs que fazem parte do NEJPOA"      
-    folder: "public/posts/ejs"
+    folder: "ejs"
     identifier_field: "ejs"
     slug: "{{slug}}"
     extension: "json"     
