--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,8 +35,8 @@ collections:
         - { label: "title", name: "title", widget: "string" }
         - { label: "alt", name: "alt", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
-        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "images/{{slug}}"}
-        - { label: "image_event", name: "image_event", widget: "image" , media_folder: "images/images_event/{{slug}}"}
+        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "../posts/eventos/images"}
+        - { label: "image_event", name: "image_event", widget: "image" , media_folder: "../posts/eventos/images/images_event"}
   - name: "ejs"
     label: "EJs que fazem parte do NEJPOA"      
     folder: "public/posts/ejs"
@@ -48,7 +48,7 @@ collections:
       preview: false
     fields:
         - { label: "title", name: "title", widget: "string" }
-        - { label: "url", name: "url", widget: "image", media_folder: "images/{{slug}}" }
+        - { label: "url", name: "url", widget: "image", media_folder: "../posts/ejs/images" }
         - { label: "tag", name: "tag", widget: "string" }
         - { label: "websiteLink", name: "websiteLink", widget: "string" }
   - name: "parceiros"
@@ -61,7 +61,7 @@ collections:
     editor:
       preview: false
     fields:
-        - { label: "image_source", name: "image_source", widget: "image", media_folder: "images/{{slug}}" }
+        - { label: "image_source", name: "image_source", widget: "image", media_folder: "posts/parceiros/images" }
         - { label: "link", name: "link", widget: "string" }
         
         
