--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -61,7 +61,7 @@ collections:
     editor:
       preview: false
     fields:
-        - { label: "nome", name: "nome", widget: "string" }
+        - { label: "title", name: "title", widget: "string" }
         - { label: "image_source", name: "image_source", widget: "image", media_folder: "posts/parceiros/images" }
         - { label: "link", name: "link", widget: "string" }
         
