--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -40,7 +40,7 @@ collections:
   - name: "ejs"
     label: "EJs que fazem parte do NEJPOA"      
     folder: "public/posts/ejs"
-    identifier_field: "nome"
+    identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
     create: true
@@ -62,7 +62,7 @@ collections:
       preview: false
     fields:
         - { label: "title", name: "title", widget: "string" }
-        - { label: "image_source", name: "image_source", widget: "image", media_folder: "posts/parceiros/images" }
+        - { label: "image_source", name: "image_source", widget: "image", media_folder: "../posts/parceiros/images" }
         - { label: "link", name: "link", widget: "string" }
         
         
