--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,8 +20,8 @@ collections:
         - { label: "subtitle", name: "subtitle", widget: "string" }
         - { label: "date", name: "date", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
-        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "../posts/blogs/images"}
-        - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder:  "../posts/blogs/images/images_alt"}
+        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "/posts/blogs/images"}
+        - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder:  "/posts/blogs/images/images_alt"}
   - name: "evento"
     label: "Eventos"      
     folder: "public/posts/eventos" #
@@ -62,7 +62,7 @@ collections:
       preview: false
     fields:
         - { label: "title", name: "title", widget: "string" }
-        - { label: "image_source", name: "image_source", widget: "image", media_folder: "../posts/parceiros/images" }
+        - { label: "image_source", name: "image_source", widget: "image", media_folder: "/posts/parceiros/images" }
         - { label: "link", name: "link", widget: "string" }
         
         
