--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: main # Branch to update (optional; defaults to master) 
 publish_mode: editorial_workflow
 locale: "pt"
-media_folder: "posts"
+media_folder: "public/posts"
 public_folder: public/posts
 collections:      
   - name: "blog"
