--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,7 +20,7 @@ collections:
         - { label: "subtitle", name: "subtitle", widget: "string" }
         - { label: "date", name: "date", widget: "string" }
         - { label: "content", name: "content", widget: "markdown" }
-        - { label: "image_source", name: "image_source", widget: "image" , media_folder: "/images"}
+        - { label: "image_source", name: "image_source", widget: "image"}
         - { label: "image_source_alt", name: "image_source_alt", widget: "image" , media_folder:  "/images/images_alt"}
   - name: "evento"
     label: "Eventos"      
