--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 publish_mode: editorial_workflow
 locale: "pt"
 media_folder: "/public/posts/images"
-public_folder: "posts/images"
+public_folder: "/posts/images"
 collections:      
   - name: "blog"
     label: "Conteúdo do Blog"      
