--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,9 +22,10 @@ collections:
         - { label: "content", name: "content", widget: "markdown" }
         - { label: "image_source", name: "image_source", widget: "image", mediafolder: "./posts/images"}
         - { label: "image_source_alt", name: "image_source_alt", widget: "image", mediafolder: "./posts/images"}
+        
    - name: "ejs"
     label: "EJs que fazem parte do NEJPOA"      
-    folder: "public/posts/enjs"
+    folder: "public/posts/ejs"
     identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
