--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -36,7 +36,22 @@ collections:
         - { label: "tag", name: "tag", widget: "string" }
         - { label: "websiteLink", name: "websiteLink", widget: "string" }
         - { label: "url", name: "image_source", widget: "image", mediafolder: "./posts/images"}
-        
+  - name: "eventos"
+    label: "Eventos"      
+    folder: "public/posts/eventos"
+    identifier_field: "title"
+    slug: "{{slug}}"
+    extension: "json"     
+    create: true
+    editor:
+      preview: false
+    fields:
+        - { label: "title", name: "title", widget: "string" }
+        - { label: "alt", name: "subtitle", widget: "string" }
+        - { label: "content", name: "content", widget: "string" }
+        - { label: "image_source", name: "image_source", widget: "image", mediafolder: "./posts/images"}    
+        - { label: "image_event", name: "imagem do evento", widget: "image", mediafolder: "./posts/images"}        
+
 
         
         
