--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -53,7 +53,7 @@ collections:
         - { label: "url", name: "image_source", widget: "image", mediafolder: "./posts/images"}
   - name: "eventos"
     label: "Eventos"      
-    folder: "public/posts/eventos"
+    folder: "/public/posts/eventos"
     identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
