--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -39,7 +39,7 @@ collections:
         - { label: "image_source_alt", name: "image_source_alt", widget: "image", mediafolder: "./posts/images"}
   - name: "ejs"
     label: "EJS que fazem parte do NEJ"      
-    folder: "public/posts/ejs"
+    file: "public/posts/ejs/ej1.json"
     identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
@@ -53,7 +53,7 @@ collections:
         - { label: "url", name: "image_source", widget: "image", mediafolder: "./posts/images"}
   - name: "eventos"
     label: "Eventos"      
-    folder: "/public/posts/eventos"
+    folder: "public/posts/eventos"
     identifier_field: "title"
     slug: "{{slug}}"
     extension: "json"     
